@@ -165,6 +165,12 @@ int main(int argc, char* argv[])
 		.tag(ui::tag::free_indicator)
 		.add_to(ui::RenderQueue::global());
 
+	ui::builder<ui::TimeIndicator>(ui::Screen::top)
+		.add_to(ui::RenderQueue::global());
+
+	ui::builder<ui::BatteryIndicator>(ui::Screen::top)
+		.add_to(ui::RenderQueue::global());
+
 	/* ui::wid()->push_back("version", new ui::Text(ui::mk_right_WText(VERSION, 3.0f, 5.0f, 0.4f, 0.4f, ui::Scr::bottom)), ui::Scr::bottom); */
 	/* ui::wid()->push_back("header_desc", new ui::Text(ui::mk_center_WText(STRING(banner), 30.0f)), ui::Scr::top); */
 	/* ui::wid()->push_back("header", new ui::Text(ui::mk_center_WText("hShop", 0.0f, 1.0f, 1.0f)), ui::Scr::top); */
