@@ -11,8 +11,16 @@ v0.2.0:
  - add a loading animation
  - major speed improvements
  - add luma locale emulator support
+ - extended meta is now lazily loaded
+ - 3hs will now ask for extra content after installing a game
+ - 3hs will now warn if you're trying to install a dlc/update for a game which you
+   don't have installed
+ - add logs menu for clearing logs
+ - fix issue where 3hs would crash if WiFi was not available
  - fix issue where 3hs wouldn't work if time & date was wrong
  - fix issue where extended meta wasn't showing in search
+ - fix issue where 3hs was unable to load a title name if the name contained any
+   complex characters
 
 v0.1.6:
  - added extended meta screen
